--- a/index.html
+++ b/index.html
@@ -2,8 +2,70 @@
 <html>
 <head>
 	<title>Dogs</title>
+
 </head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" type="text/css" href="main.css">
 <body>
-<script type="text/javascript" src="main.js"></script>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Dogs</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+	<div class="row">
+		<div class="col-md-6">Div 1</div>
+		<div class="col-md-6">Div 2</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-3">D1</div>
+		<div class="col-md-3">D2</div>
+		<div class="col-md-3">D3</div>
+		<div class="col-md-3">D4</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-3 col-md-offset-3">Div 1</div>
+		<div class="col-md-3">Div 1</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-6">
+			<div class="col-md-3"><button class="btn btn-default">Default Button</button></div>
+			<div class="col-md-3">two</div>
+			<div class="col-md-3">three</div>
+			<div class="col-md-3">four</div>
+		</div>
+
+		<div>
+			<div class="col-md-9">nine</div>
+			<div class="col-md-3">three</div>
+		</div>
+	</div>
+
+		<script
+	  	src="https://code.jquery.com/jquery-3.2.1.min.js"
+	  	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	  	crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
